add: 連続記録、使い方例を翻訳登録

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -1,4 +1,35 @@
 ja:
+  memos:
+    _count_memos:
+      total_memos: "総メモ数"
+      streak_days: "連続記録日数"
+      note: 連続記録日数について
+      description: |
+        記録は「実際の作成日」でカウントされます。
+        メモ作成時に選んだ日付は影響しません。
+        　
+        毎日1回、記録を作成して連続記録を目指しましょう！
+      with_count: "今日の記録はカウントされています"
+      no_count: "今日の記録はまだありません。記録更新を目指しましょう！"
+    _example:
+      choice: "感情を選択する"
+      description_1: |
+        記録したい出来事に対する
+        感情を選択しましょう。
+      detail: "詳細を入力する"
+      description_2_1: |
+        フォームに沿って
+        出来事の詳細を記録します。
+      description_2_2: |
+        「なぜ？」を掘り下げて
+        自身の考えを見つめ直します。
+      summary: "まとめ"
+      description_3: |-
+        自分なりの答えや気づきを
+        記録しましょう。
+
+        思考整理や新たな発見に
+        つながるかもしれません。
   shared:
     _footer:
       terms: "利用規約"
