--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -43,6 +43,7 @@ ja:
       favorite: "お気に入り"
       share_app: "アプリをシェア"
     _header:
+      catchphrase: "記録して振り返り、思考を育てる"
       guest_logged_in: "ゲストログイン中"
       logged_in: "ログイン中"
       create_memo: "メモ作成"
