--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -46,6 +46,33 @@ ja:
       sad: "哀"
       funny: "楽"
       other: "その他"
+    confirm:
+      title: "入力内容確認"
+      is_ok?: "この内容でよろしいですか？"
+      when: "いつ"
+      what: "何"
+      why: "なぜ"
+      why_more: "なぜをもっと深掘り"
+      how: "どのように"
+      summary: "まとめ・気付き"
+      save: "メモ保存"
+    edit:
+      title: "メモ編集"
+      example: "書き方例"
+      update: "更新"
+    index:
+      title: "メモ一覧"
+      last_update_memo: "最終更新のメモ"
+      summary: "まとめ・気付き"
+      no_date: "日付なし"
+      no_memo: |
+        記録はまだありません。
+        メモを作成してみましょう！
+      create_new: "新規作成"
+
+    new:
+      title: "メモ作成"
+      example: "書き方例"
   shared:
     _footer:
       terms: "利用規約"
