chande: Topページのタイトルを非表示に

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -108,7 +108,7 @@ ja:
       logout: "ログアウト"
   top:
     index:
-      title: "TOPページ"
+      title: "TOP"
       introduction: |
         その日の出来事を一言で記録し、なぜそう感じたかを深掘りすることで
         思考を整理するアプリです。
