update: Topページ 文言を変更

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -110,15 +110,21 @@ ja:
     index:
       title: "TOP"
       introduction: |
-        その日の出来事を一言で記録し、なぜそう感じたかを深掘りすることで
-        思考を整理するアプリです。
-        「なぜ？」「どこが？」と具体的に問いかけることで、思考の明確化を促します。
-        思考整理を習慣化して、自分の新しい価値観に気付いてみませんか？
+        このアプリは、あなたに起きた出来事を振り返り
+        思考を整理するためのお手伝いをします。
+        　
+        「なぜ？」「どこが？」と
+        具体的に深堀りすることで
+        思考の明確化を促します。
+        　
+        1日1回。
+        思考を整理して新しい価値観に気づきませんか？
+        　
       guest_login: "登録なしで使ってみる"
       or: "または"
-      email: メールアドレス"
-      password: パスワード"
-      Forgot password?: パスワードをお忘れの方はこちら"
+      email: "メールアドレス"
+      password: "パスワード"
+      forgot_password?: "パスワードをお忘れの方はこちら"
       login: "　　ログイン　　"
       sign_up: "新規登録ページへ"
       description: "このアプリでできること"
