update: newページ 文言変更

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -31,7 +31,9 @@ ja:
         思考整理や新たな発見に
         つながるかもしれません。
     _form:
-      before: "一つずつ掘り下げてみましょう"
+      before: |-
+        について
+        一つずつ掘り下げてみましょう
       when: "いつ"
       what: "何"
       why: "なぜ"
