style: お気に入り一覧ページ　レスポンシブ対応

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -6,6 +6,18 @@ ja:
       first: "最初へ"
       last: "最後へ"
       truncate: "…"
+  memo_favorites:
+    _memo_favorite:
+      no_date: "日付なし"
+      caution: |
+        本当に削除しますか？
+        
+        ※このメモが連続記録日数に含まれている場合、
+        記録が途切れる可能性があります。
+    index:
+      title: "お気に入り"
+      no_favorites: "お気に入りのメモはまだありません。"
+      memo_list: "メモ一覧からお気に入り登録"
   memos:
     _count_memos:
       total_memos: "総メモ数"
@@ -121,7 +133,8 @@ ja:
     index:
       title: "TOP"
       introduction: |
-        このアプリは、あなたに起きた出来事を振り返り
+        このアプリは
+        あなたに起きた出来事を振り返り
         思考を整理するためのお手伝いをします。
         　
         「なぜ？」「どこが？」と
@@ -129,7 +142,8 @@ ja:
         思考の明確化を促します。
         　
         1日1回。
-        思考を整理して新しい価値観に気づきませんか？
+        思考を整理して
+        新しい価値観に気づきませんか？
         　
       guest_login: "登録なしで使ってみる"
       or: "または"
